# mcp-server-doctor

./: CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: SECURITY_REVIEW_2026-07.md
examples/: invalid-report.json  valid-report.json
src/mcp_server_doctor/: __init__.py  __main__.py  _version.py  doctor.py
tests/: test_doctor.py
